--- a/vignettes/calculate-indicators.Rmd
+++ b/vignettes/calculate-indicators.Rmd
@@ -34,18 +34,19 @@ Data form BNDCP has been carefully aggregated and inserted in this package.
 Let's say we are interested in calculating and indicator say number 11, namely Distance between award value and sums paid. The indicator aims at quantifying the difference between the sum foreseen in the contract and the actual payment by the C.A. (_ita_ S.A. Stazione Appaltante) prior and after the emergency outbreak. This is extremely convenient since we may expect that the ratio between what's should be paid and what it is actually paid (in other words the the proportion of the contract  value left to be paid) needs to remain just as equal in the two adjacent periods.
 We may also suppose that this does not happen due to the fact that during emergency outbreaks inspections and controls are wicker and less in-depth. This may give the chance to fraudsters to get money quicker than before and runaway 💰. There it is an indicator for to quantify that type of risk.
 
-All we need to do is to load data `test_data_bndcp_core` and supply related variables to function `ind_11()`. Check out the documentation for function `ind_11()` to get a grasp on that.
+All we need to do is to load data `mock_data_core` and supply related variables to function `ind_11()`. Check out the documentation for function `ind_11()` to get a grasp on that.
 
 
 ```{r ind11}
-data("test_data_bndcp_core", package = "coresoi")
+data("mock_data_core", package = "coresoi")
 
 ind_11(
-  data=test_data_bndcp_core,
+  data = mock_data_core,
   award_value=importo_aggiudicazione, 
-  sums_paid=imp_finale,
+  sums_paid=importo_lotto,
   cf_amministrazione_appaltante,
-  publication_date=data_pubblicazione
+  publication_date=data_pubblicazione,
+  outbreak_starting_date = lubridate::ymd("2017-06-30")
   ) |>
   head(10)
 
