--- a/R/Indicator New_11/Mock_dictionary.Rmd
+++ b/R/Indicator New_11/Mock_dictionary.Rmd
@@ -29,21 +29,68 @@ coresoi::mock_data_core %>%
          Contracting_agent = denominazione_amministrazione_appaltante) -> micromock_data
 ```
 
+-   Macro grouped cpv
+
+```{r}
+coresoi::mock_data_core %>%
+  transmute(
+    ID = cig,
+    contract_object = oggetto_lotto,
+    macroclass =
+      cod_cpv %>%
+      as.character() %>%
+      str_extract("^.{2}"),
+    Territory = provincia,
+    Contracting_agent = denominazione_amministrazione_appaltante
+    ) -> macromock_data
+```
+
 -   Tidy the the `contract_object`
 
 ```{r}
 
-micromock_data %>%
+macromock_data %>%
   tidytext::unnest_tokens(word,contract_object) %>%
   anti_join(get_stopwords(language = "it")) %>%
-  mutate(word = word %>% wordStem("italian")) -> tidy_mock
+  mutate(word = word %>% wordStem("italian")) -> tidy_macromock
 
 ```
 
 -   Check statistics per contract class
 
 ```{r}
-tidy_mock %>% group_by(contract_class,word) %>%
+
+tidy_macromock %>% count(macroclass, word) %>%
+  bind_tf_idf(word, macroclass, n) %>%
+  mutate(across(where(is.numeric),round,3)) %>%
+  arrange(macroclass,-tf_idf) -> macromock_tfidf
+
+```
+
+-   Summary stats
+
+```{r}
+
+tidy_mock %>% group_by(macroclass) %>%
+  summarise(
+    n = n()
+  ) %>%
+  left_join(
+    macromock_tfidf %>%
+  group_by(macroclass) %>%
+  summarise(gini = DescTools::Gini(n),
+            atkinson = ineq::Atkinson(n))
+  ) %>%
+  mutate(across(where(is.numeric),round,3)) %>%
+  pander::pander(split.table = Inf)
+```
+
+------------------------------------------------------------------------
+
+-   ONLY FOR MICROMOCK
+
+```{r eval=FALSE}
+micro %>% group_by(contract_class,word) %>%
   count() %>%
   arrange(contract_class,-n) %>% View()
 ```
